--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,11 +1,19 @@
 @import './mixins.scss';
 
 .hero {
-    background-color: red;
     display: flex;
     align-items: center;
     width: 100%;
     height: 100vh;
+
+    @media(max-width: 950px) {
+        flex-direction: column;
+        background-image: url('../img/image.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+    }
 
     &__data {
         display: flex;
@@ -15,19 +23,47 @@
         flex-grow: 1;
         position: relative;
         height: 100%;
+
+        @media (max-width: 950px) {
+            width: 100%;
+            height: fit-content;
+        }
     }
 
     &__data-container {
-        background-color: green;
         display: flex;
         flex-direction: column;
         width: 487px;
+        margin: auto 0;
+        padding: 20px;
+
+        @media (max-width: 950px) {
+            background-color: hsla(0, 0%, 93%, 0.9);
+            margin: auto auto 300px 60px;
+        }
+
+        @media (max-width: 600px) {
+            width: 350px;
+        }
+
+        @media (max-width: 500px) {
+            margin: auto;
+        }
+
+        @media (max-width: 400px) {
+            width: 100%;
+            align-items: center;
+        }
     }
 
     &__p {
         font-size: 14px;
         line-height: 17px;
         text-transform: uppercase;
+
+        @media (max-width: 400px) {
+            font-size: 12px;
+        }
     }
 
     &__h1 {
@@ -35,10 +71,24 @@
         line-height: 65px;
         font-weight: 700;
         margin: 22px 0 40px;
+
+        @media (max-width: 600px) {
+            font-size: 40px;
+        }
+
+        @media (max-width: 400px) {
+            font-size: 36px;
+            text-align: center;
+        }
     }
 
     &__button {
         @include basic-button;
+
+        @media (max-width: 400px) {
+            font-size: 12px;
+            padding: 20px 10px;
+        }
     }
 
     &__button:hover {
@@ -53,21 +103,34 @@
         justify-content: center;
         flex-shrink: 1;
         overflow: hidden;
+
+        @media (max-width: 950px) {
+            display: none;
+        }
+
     }
 
     &__img {
         height: 100%;
         width: auto;
+
+        @media (max-width: 950px) {
+            width: 100%;
+            height: auto;
+        }
     }
 
     &__contact {
         display: flex;
         flex-direction: column;
-        background-color: blue;
         height: 100%;
         width: 338px;
         flex-shrink: 2;
         overflow: hidden;
+
+        @media (max-width: 950px) {
+            display: none;
+        }
     }
 
     &__contact-button {
