--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -33,6 +33,7 @@
 @mixin contact-button {
     width: 100%;
     height: 130px;
+    padding: 0 5px;
     color: white;
     background-color: black;
     border: none;
