--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -59,6 +59,7 @@
     &__p {
         font-size: 14px;
         line-height: 17px;
+        letter-spacing: 0.05em;
         text-transform: uppercase;
 
         @media (max-width: 400px) {
