--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -21,9 +21,11 @@
     box-sizing: border-box;
 }
 
-body {
+body,
+button {
     font-family: 'Archia', sans-serif;
 }
 
 @import './header.scss';
 @import './hero.scss';
+@import './bar.scss';
