--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -47,3 +47,21 @@
 @mixin contact-button-hover {
     background-color: #17A1EE;
 }
+
+@mixin cicle-button {
+    width: 62px;
+    height: 62px;
+    border-radius: 50%;
+    border: 1px solid #5C5C5C;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    transition: color 0.2s linear, background-color 0.2s linear;
+    cursor: pointer;
+}
+
+@mixin cicle-button-hover {
+    color: black;
+    background-color: white;
+    border: none;
+}
