--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -54,6 +54,10 @@
             width: 100%;
             align-items: center;
         }
+
+        @media (max-height: 400px) {
+            margin: auto 300px auto auto;
+        }
     }
 
     &__p {
@@ -65,6 +69,10 @@
         @media (max-width: 400px) {
             font-size: 12px;
         }
+
+        @media (max-height: 400px) {
+            font-size: 10px;
+        }
     }
 
     &__h1 {
@@ -75,12 +83,20 @@
 
         @media (max-width: 600px) {
             font-size: 40px;
+            line-height: normal;
         }
 
         @media (max-width: 400px) {
             font-size: 36px;
             text-align: center;
         }
+
+        @media (max-height: 400px) {
+            font-size: 32px;
+            line-height: normal;
+            margin: 5px 0;
+        }
+
     }
 
     &__button {
