--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -65,3 +65,17 @@
     background-color: white;
     border: none;
 }
+
+@mixin pseudo {
+    height: 2px;
+    width: 15px;
+    display: block;
+    content: '';
+    position: absolute;
+    background-color: black;
+    transition: background-color 0.2s linear, transform 0.2s linear;
+}
+
+@mixin pseudo-hover {
+    background-color: #5C5C5C;
+}
